--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js",
+    "start": "nodemon index.js",
+    "dev": "nodemon index.js",
+    "build":"npm install",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
